Fix stylelinter errors

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,7 +32,7 @@
 }
 
 .jumbotron {
-  background-image: asset-url('blogImage.jpg');
+  background-image: url('blogImage.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
