--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,19 +1,44 @@
-  <%= render 'users/user_card' %>
-  <%= render 'users/bio' %>
-  <%= render 'users/comments_likes' %>
-  
-  <% @user.posts.each do |post| %>
-  <div class="card mb-3 mx-3 flex-column" style="max-width: 540px;">
-<%= link_to(user_post_path(@user.id, post.id)) do %>
-  
+  <div class="card mb-3" style="max-width: 540px;">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src=<%= @user.photo %> class="img-fluid rounded-start" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title"><%= @user.name %></h5>
+          <p class="card-text"><small class="text-muted">Number of posts: <%= @user.posts_counter %></small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+    <% @user.posts.each do |post| %>
+  <%= link_to(user_post_path(@user.id, post.id)) do %> 
+      <div class="card mb-3 mx-3" style="max-width: 540px;">
+        <div>Post #
+          <%= post.id %></div>
+          <%= post.text %>
+          <div> Comments: <% if post.comments_counter != nil %>
+          <%= post.comments_counter %>
+          <% else %>
+          0 
+          <% end %>
+          </div>
+          <div>
+          Likes: <% if post.likes_counter != nil %>
+          <%= post.likes_counter %>
+          <% else %>
+          0 
+          <% end %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+    <div class="card mb-3 mx-3 flex-column" style="max-width: 540px;">
     <div class="d-flex flex-column"> <% post.five_recent_comments.each do |comment| %> 
       <%= comment.author.name %> : <%= comment.text %>
       <% end %>
       </div>
-      <% end %>
       </div>
-      <% end %>
+  <% end %>
   
   <%= link_to 'See all users', users_path(@user), class: "btn btn-secondary mx-3 mb-3"%>
-
-
