--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer id="sticky-footer" class="py-4 bg-dark text-white">
   <div class="container text-center">
-    <small>Copyright &copy; 'Meri Gogichashvili' class: "text-white"</small>
+    <small class="text-white">Copyright &copy; Meri-MG</small>
   </div>
 </footer>
