--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,15 @@
   </head>
 
   <body class="d-flex flex-column">
+  <header>
     <%= render 'layouts/navigation' %>
+    <%= render 'layouts/alerts' %>
+    </header>
+    <main>
     <div id="page-content">
       <%= yield %>
     </div>
+    </main>r
     <%= render 'layouts/footer' %>
   </body>
 </html>
