--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <% @users.each do |user| %>
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card mb-3 mt-3" style="max-width: 540px;">
 <%= link_to(user) do %>
   <div class="row g-0">
     <div class="col-md-4">
