--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,4 +4,6 @@
 
 <%= render 'comments_likes' %>
 
-<%= link_to 'See all posts', user_posts_path(@user), class: "btn btn-secondary mx-3 mb-3"%>
+<div class="container">
+  <%= link_to 'See all posts', user_posts_path(@user), class: "btn btn-secondary mx-3 mb-3"%>
+</div>
