--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer id="sticky-footer" class="py-4 bg-dark text-white">
+<footer id="sticky-footer" class="mt-auto py-4 bg-dark text-white">
   <div class="container text-center">
     <small class="text-white">Copyright &copy; Meri-MG</small>
   </div>
