--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="card m-3" style="max-width: 540px;">
+<div class="card mt-3" style="max-width: 540px;">
 
     <div>Post # 
      <%= @post.id %>
@@ -16,7 +16,7 @@
   <% end %>
   </div>
   </div>
-  <div class="card m-3" style="max-width: 540px;">
+  <div class="card mt-3" style="max-width: 540px;">
 
   <div> <% @post.comments.each do |comment| %> 
     <%= comment.author.name %> : <%= comment.text %>
@@ -24,7 +24,7 @@
     </div>
     </div>
 
-    <%= form_with url: "/posts/#{@post.id}/comments", scope: :comment, class: "col-3 shadow p-3 mb-3 mx-3 bg-info rounded", local: true do |f| %>
+    <%= form_with url: "/posts/#{@post.id}/comments", scope: :comment, class: "col-3 shadow p-3 mb-3 bg-info rounded", local: true do |f| %>
       <div class="form-group row mt-3">
         <%= f.label 'Write a comment', class: "col-form-label text-light" %>
         <div class=""> 
@@ -36,13 +36,12 @@
       </div>
     <% end %>
 
-    <%= form_with url: "/posts/#{@post.id}/likes", scope: :like, class: "col-3 shadow p-1 mb-3 mx-3 bg-info rounded", local: true do |f| %>
+    <%= form_with url: "/posts/#{@post.id}/likes", scope: :like, class: "col-3 shadow p-1 mb-3 bg-info rounded", local: true do |f| %>
       <div class="form-group row justify-content-center">
         <%= f.submit 'Like', class: "btn btn-outline-light" %>
       </div>
     <% end %>
 
-<%= link_to 'Create new post', new_user_post_path, class: "btn btn-secondary mx-3 mb-3" %>
+<%= link_to 'Create new post', new_user_post_path, class: "btn btn-secondary mb-3" %>
 
-<%= link_to 'See all posts', user_posts_path(@user), class: "btn btn-secondary mx-3 mb-3" %>
-
+<%= link_to 'See all posts', user_posts_path(@user), class: "btn btn-secondary mb-3" %>
