--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,4 +6,7 @@
 
 <div class="container">
   <%= link_to 'See all posts', user_posts_path(@user), class: "btn btn-secondary mx-3 mb-3"%>
+  <%= link_to 'Create new post', new_user_post_path(@user), class: "btn btn-secondary mb-3" %>
 </div>
+
+
