--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <%= yield %>
       </div>
     </main>
-    <footer>
+    <footer id="sticky-footer" class="mt-auto py-4 bg-dark text-white">
       <%= render 'layouts/footer' %>
     </footer>
   </body>
