Add avatar and change views according to the privileges

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="card mt-3" style="max-width: 540px;">
+<div class="card mt-3 p-3" style="max-width: 540px;">
   <div>Post # 
     <%= @post.id %>
       by <%= @post.author.name %>
@@ -30,19 +30,23 @@
       <% end %>
     </div>
     <div>
+    <% unless current_user.nil? || cannot?(:destroy, @post) %>
       <%= form_with url: "/posts/#{@post.id}/posts", scope: :post, class: "col-4 p-1 mb-3", local: true, method: :delete do |f| %>
         <%= button_to '', '#', class: 'm-0 p-0 fa-solid fa-trash-can mx-1 btn', onclick: 'this.parentNode.submit()' %>
       <% end %>
+    <% end %>
     </div>
   </div>
 </div>
   <div > <% @post.comments.each do |comment| %> 
-    <div class="d-flex flex-row justify-content-around align-items-center card mt-3 mb-3 text-info" style="max-width: 540px;">
+    <div class="d-flex flex-row justify-content-between align-items-center card p-3 mt-3 mb-3 text-info" style="max-width: 540px;">
       <div><%= comment.author.name %> : <%= comment.text %></div>
-      <div><%= form_with url: "/posts/#{@post.id}/comments", scope: :like, class: "col-4 p-1", local: true, method: :delete do |f| %>
-        <%= button_to '', '#', class: 'fa-solid fa-trash-can btn', onclick: 'this.parentNode.submit()' %>
-      <% end %>
+      <% unless current_user.nil? || cannot?(:destroy, comment) %>
+        <div><%= form_with url: "/posts/#{@post.id}/comments", scope: :comment, class: "p-1", local: true, method: :delete do |f| %>
+          <%= button_to '', '#', class: 'fa-solid fa-trash-can btn', onclick: 'this.parentNode.submit()' %>
+        <% end %>
     </div>
+    <% end %>
     </div>
   <% end %>
   </div>
