--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,12 @@
-  <div class="card mb-3" style="max-width: 540px;">
+  <div class="card mb-3 mt-3" style="max-width: 540px;">
     <div class="row g-0">
-      <div class="col-md-4">
-        <img src=<%= @user.photo %> class="img-fluid rounded-start" alt="...">
-      </div>
+    <div class="col-md-4">
+    <% if @user.photo? %>
+      <img src=<%= @user.photo %> class="img-fluid rounded-start" alt="...">
+    <% else %>
+      <%= image_tag "avatar.png", class: "img-fluid rounded-start" %>
+    <% end %>
+  </div>
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title"><%= @user.name %></h5>
@@ -11,34 +15,47 @@
       </div>
     </div>
   </div>
-    <% @user.posts.each do |post| %>
-      <%= link_to(user_post_path(@user.id, post.id)) do %> 
-        <div class="card mb-3" style="max-width: 540px;">
-          <div>Post #
-            <%= post.id %></div>
-            <%= post.text %>
-            <div> Comments: <% if post.comments_counter != nil %>
-            <%= post.comments_counter %>
-            <% else %>
-            0 
-            <% end %>
+  <% @user.posts.each do |post| %>
+    <%= link_to(user_post_path(@user.id, post.id)) do %> 
+      <div class="card mt-3 p-3" style="max-width: 540px;">
+        <div>Post # 
+          <%= post.id %>
+            by <%= post.author.name %>
+        </div>
+        <div>
+          <%= post.text %>
+        </div>
+    <% end %>
+          <div class="col-2 d-flex justify-content-between">
+            <div class="col-4 p-1 mb-3">
+              <i class="fa-solid fa-comment"></i>
             </div>
-            <div>
-            Likes: <% if post.likes_counter != nil %>
-            <%= post.likes_counter %>
+            <div class="col-4 p-1 mb-3">
+            <% if post.comments_counter != nil %>
+              <%= post.comments_counter %>
             <% else %>
-            0 
+              0 
             <% end %>
+          </div>
+            <div class="col-4 p-1 mb-3">
+              <i class='fa-solid fa-heart mx-1'></i>
             </div>
+          <div class="col-4 p-1 mb-3">
+            <% if post.likes_counter != nil %>
+              <%= post.likes_counter %>
+            <% else %>
+              0 
+            <% end %>
           </div>
         </div>
-      <% end %>
-      <div class="card mb-3 flex-column" style="max-width: 540px;">
-        <div class="d-flex flex-column"> <% post.five_recent_comments.each do |comment| %> 
-          <%= comment.author.name %> : <%= comment.text %>
-        <% end %>
-        </div>
       </div>
+    <div class="d-flex flex-column mt-3"> 
+      <% post.five_recent_comments.each do |comment| %> 
+        <div class="card mb-3 p-2 flex-column" style="max-width: 540px;">
+          <%= comment.author.name %> : <%= comment.text %>
+        </div>
+      <% end %>
+    </div>
   <% end %>
   
 <div class="container">
