--- a/app/views/users/_user_card.html.erb
+++ b/app/views/users/_user_card.html.erb
@@ -1,8 +1,12 @@
-<div class="card m-3" style="max-width: 540px;">
+<div class="card mt-3 mb-3" style="max-width: 540px;">
   <div class="row g-0">
-    <div class="col-md-4">
-      <img src=<%= @user.photo %> class="img-fluid rounded-start" alt="...">
-    </div>
+  <div class="col-md-4">
+  <% if @user.photo? %>
+    <img src=<%= @user.photo %> class="img-fluid rounded-start" alt="...">
+  <% else %>
+    <%= image_tag "avatar.png", class: "img-fluid rounded-start" %>
+  <% end %>
+</div>
     <div class="col-md-8">
       <div class="card-body">
         <h5 class="card-title"><%= @user.name %></h5>
