--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -59,5 +59,5 @@
   <% end %>
   
 <div class="container">
-  <%= link_to 'See all users', users_path(@user), class: "btn btn-secondary mb-3"%>
+  <%= link_to 'Show all users', users_path(@user), class: "btn btn-secondary mb-3"%>
 </div>
