--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -31,8 +31,9 @@
     </div>
     <div>
     <% unless current_user.nil? || cannot?(:destroy, @post) %>
-      <%= form_with url: "/posts/#{@post.id}/posts", scope: :post, class: "col-4 p-1 mb-3", local: true, method: :delete do |f| %>
-        <%= button_to '', '#', class: 'm-0 p-0 fa-solid fa-trash-can mx-1 btn', onclick: 'this.parentNode.submit()' %>
+      <%= form_with url: "/users/#{@user.id}/posts/#{@post.id}/delete", class: "col-4 p-1 mb-3", method: :delete do |f| %>
+        <%= f.hidden_field :post_id, value: @post.id %>
+        <%= button_to '', '#', class: 'm-0 p-0 fa-solid fa-trash-can mx-1 btn', onclick: 'Rails.fire(this.parentNode, \'submit\')' %>
       <% end %>
     <% end %>
     </div>
@@ -42,10 +43,12 @@
     <div class="d-flex flex-row justify-content-between align-items-center card p-3 mt-3 mb-3 text-info" style="max-width: 540px;">
       <div><%= comment.author.name %> : <%= comment.text %></div>
       <% unless current_user.nil? || cannot?(:destroy, comment) %>
-        <div><%= form_with url: "/posts/#{@post.id}/comments", scope: :comment, class: "p-1", local: true, method: :delete do |f| %>
-          <%= button_to '', '#', class: 'fa-solid fa-trash-can btn', onclick: 'this.parentNode.submit()' %>
-        <% end %>
-    </div>
+        <div>
+          <%= form_with url: "/comments/delete", class: "p-1", method: :delete do |f| %>
+            <%= f.hidden_field :comment_id, value: comment.id %>
+            <%= button_to '', '#', class: 'fa-solid fa-trash-can btn', onclick: 'Rails.fire(this.parentNode, \'submit\')' %>
+          <% end %>
+        </div>
     <% end %>
     </div>
   <% end %>
@@ -63,4 +66,4 @@
   </div>
 <% end %>
 
-<%= link_to 'See all posts', user_posts_path(@user), class: "btn btn-secondary mb-3" %>
+<%= link_to 'Show all posts', user_posts_path(@user), class: "btn btn-secondary mb-3" %>
