--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
 
   <body class="d-flex flex-column min-vh-100">
     <header>
-      <%= render 'layouts/navigation' %>
-      <%= render 'layouts/alerts' %>
+      <%= render "layouts/navigation" %>
+      <%= render "layouts/alerts" %>
     </header>
     <main>
       <div id="page-content" class="container">
@@ -22,7 +22,7 @@
       </div>
     </main>
     <footer id="sticky-footer" class="mt-auto py-4 bg-dark text-white">
-      <%= render 'layouts/footer' %>
+      <%= render "layouts/footer" %>
     </footer>
   </body>
 </html>
